後台登入首頁及單集列表 新增分頁功能

--- a/app/javascript/styles/common.scss
+++ b/app/javascript/styles/common.scss
@@ -21,3 +21,7 @@
 .mt-13 {
   margin-top: 3.25rem;
 }
+
+.page.current {
+  @apply cursor-pointer border-blue-500 text-blue-500 hover:border-blue-400 hover:text-blue-400;
+}
