--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -91,7 +91,13 @@
             <%= f.input :artist, input_html:{class: "edit-form" }, label: "作者名稱" %>
           </div>
           <div class="w-56 h-56 pr-2 pt-2 rounded flex flex-col flex-shrink-0 items-center">
-            <div class="w-48 h-48 rounded-lg bg-gray-300"><%= image_tag(@episode.cover.url) if @episode.cover? %></div>
+            <div class="w-48 h-48 rounded-lg bg-gray-300">
+              <% if @episode.cover? %>
+                <%= image_tag(@episode.cover.url) %>
+              <% else %>
+                <%= image_tag(@podcast.cover.url) if @podcast.cover? %>
+              <% end %>
+            </div>
             <label class="border border-gray-300 my-2 mx-4 pt-1 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
               上傳封面圖片
               <%= f.input :cover, as: :file, input_html:{class: "hidden" }, label: false %>
