--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -98,7 +98,7 @@
             <%= f.input :keyword, input_html:{class: "edit-form" }, label: "作者名稱" %>
           </div>
           <div class="w-56 h-64 pr-2 pt-2 rounded flex flex-col flex-shrink-0 items-center">
-            <div class="w-48 h-48 rounded-lg bg-gray-300"><%= image_tag(@episode.cover.url) if @episode.cover? %></div>
+            <div class="w-48 h-48 rounded-lg bg-gray-300"></div>
             <label class="border border-gray-300 my-2 mx-4 pt-1 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
               上傳封面圖片
               <%= f.input :cover, as: :file, input_html:{class: "hidden" }, label: false %>
@@ -134,13 +134,13 @@
   </div>
   <!-- 上半框 -->
   <div class="bg-white mt-16">
-    <div class="container container-donate w-2/3 mx-auto py-6 bg-white">
+    <div class="container container-index w-2/3 mx-auto py-6 bg-white">
       <h1 class="text-xl font-black">歡迎來到 SoundBar</h1>
     </div>
   </div>
   <!-- 下半框 -->
-  <div class="bg-gray-100">
-    <section class="font-medium flex flex-wrap container w-2/3 mx-auto mt-6">
+  <div class="bg-gray-100 mb-16">
+    <section class="font-medium flex flex-wrap container container-index w-2/3 mx-auto mt-6">
       <!-- 搜尋框及建立Podcast -->
       <div class="flex justify-between w-full">
         <form class="search-form flex bg-white border border-gray-300 hover:border-blue-400 rounded transition duration-300">
@@ -172,6 +172,9 @@
             </div>
           </div>
         <% end %>
+      </div>
+      <div class="mt-5 flex w-full justify-end">
+        <%= paginate @podcasts, window: 0 %>
       </div>
     </section>
   </div>
