--- a/app/views/player/podcasts/show.html.erb
+++ b/app/views/player/podcasts/show.html.erb
@@ -1,11 +1,4 @@
-<header class="flex justify-between bg-indigo">
-  <div class="flex m-4 justify-center md:justify-start">
-    <%= link_to image_tag("logo_trans", size: "250x250"), "/#" %>
-  </div>
-  <form class="search-form border hover:border-blue-600 rounded flex my-auto mr-10">
-    <button class="search-btn focus:outline-none w-10 bg-white rounded-l text-gray-500 border-none p-2"><i class="fas fa-search"></i></button><input type="text" class="search-input focus:outline-none w-72 bg-white rounded-r border-none p-2" placeholder="搜尋 Podcast">
-  </form>
-</header>
+<%= render '/frontend/header' %>
 
 <div class="bg-indigo">
   <div class="max-w-screen-lg mx-auto pt-10">
@@ -68,11 +61,13 @@
             <span><%= episode.title %></span>
           </p>
           <p class="font-extralight"><%= episode.description %></p>
-          <div class="flex items-end justify-between">
-            <p class="align-bottom"><span class="pr-2"><i class="far fa-clock"></i></span>12:10</p>
+          <div class="flex justify-start items-end">
+            <p class="align-bottom pr-5">
+              <span class="pr-2"><i class="far fa-clock"></i></span>12:10
+            </p>
             <p class="">
               <span class="pr-2"><i class="far fa-calendar-alt"></i></span>
-              <span><%= episode.created_at %></span>
+              <span><%= episode.created_at.strftime('%Y-%m-%d') %></span>
             </p>
           </div>
         </div>
@@ -90,7 +85,4 @@
   </div>
 </div>
 
-
-
 <%= render '/frontend/footer' %>
-
