--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -123,7 +123,7 @@
               <th class="p-2 w-20">連結</th>
             </thead>
             <tbody class="bg-white">
-              <% @episodes.each_with_index do |episode, index| %>
+              <% @episodes.each do |episode, index| %>
                 <tr>
                   <td class="p-2 w-24"><%= image_tag(episode.cover.url) if episode.cover? %></td>
                   <td class="w-10"><%= link_to "S#{episode.season}E#{episode.episode}", podcast_episode_path(@podcast.random_url, episode.random_url), class: "block py-4 px-2" %></td>
