--- a/app/views/player/podcasts/show.html.erb
+++ b/app/views/player/podcasts/show.html.erb
@@ -6,7 +6,7 @@
       <span class="bg-genresbg m-10 py-1 px-5 text-white rounded-xl"><%= @podcast.genres %></span>
       <div class="ms:flex m-10 md:flex">
         <div class="cover_size pr-5">
-          <%= image_tag(@podcast.cover.url, size: "900x900") if @podcast.cover? %>
+          <%= image_tag(@podcast.cover.url, size: "300x300") if @podcast.cover? %>
         </div>
         <div>
           <ul class="">
@@ -46,35 +46,38 @@
   </div>
 </div>
 
-<div class="bg-gray-100">
+
+<div class="bg-gray-200">
   <div class="max-w-screen-lg mx-auto pt-10">
-    <div class="bg-white rounded-md">
-      <div class="flex justify-around">
-        <div class="pt-5 pb-5">
-          <%= image_tag(@podcast.cover.url, size: "180x180") if @podcast.cover? %>
-        </div>
-        <div class="grid jusfity-between pt-5 pb-5">
-          <% @episodes.each do |episode| %>
-          <p class="text-2xl">
-            <span class="pr-1">EP.<%= episode.episode %></span>
-            <span>｜</span>
-            <span><%= episode.title %></span>
-          </p>
-          <p class="font-extralight"><%= episode.description %></p>
-          <div class="flex justify-start items-end">
-            <p class="align-bottom pr-5">
-              <span class="pr-2"><i class="far fa-clock"></i></span>12:10
-            </p>
-            <p class="">
-              <span class="pr-2"><i class="far fa-calendar-alt"></i></span>
-              <span><%= episode.created_at.strftime('%Y-%m-%d') %></span>
-            </p>
+    <div class="m-1">
+      <div class="grid justify-around">
+        <div class="gird jusfity-between pt-5 pb-5">
+          <% @episodes.order(id: :desc).each do |episode| %>
+          <div class="flex justify-between rounded-lg p-5 bg-white m-3">
+            <div class="pt-5 pb-5">
+              <%= image_tag(@podcast.cover.url, size: "180x180") if @podcast.cover? %>
+            </div>
+            <div class="pt-5 pl-5 pr-52">
+              <p class="text-2xl"><%= episode.title %></p>
+              <p class="font-extralight"><%= episode.description %></p>
+                <div class="flex pt-20">
+                  <p class="align-bottom pr-5">
+                    <span class="pr-2"><i class="far fa-clock"></i></span>12:10
+                  </p>
+                  <p class="">
+                    <span class="pr-2"><i class="far fa-calendar-alt"></i></span>
+                    <span><%= episode.created_at.strftime('%Y-%m-%d') %></span>
+                  </p>
+                </div>
+            </div>
+            <div class="play_button my-auto">
+              <%= link_to player_podcast_episode_path(@podcast.random_url, episode.random_url) do %>
+                <%= fa_icon "play-circle" %>
+              <% end %>
+            </div>
           </div>
-        </div>
-        <div class="play_button my-auto"><a href=""><i class="fas fa-play-circle"></i></a>
-          <%= link_to "Play" , player_podcast_episode_path(@podcast.random_url, episode.random_url) %>
-        </div>
           <% end %>
+        </div>
       </div>
     </div>
   </div>
