--- a/app/views/backend/_navbar_index.html.erb
+++ b/app/views/backend/_navbar_index.html.erb
@@ -1,7 +1,7 @@
 <div class="flex justify-between w-full bg-white h-16 py-4 text-gray-600">
 
   <div class="-mt-2">
-    <%= link_to image_tag("new_logo_black", size: "180x180"), podcasts_path  %>
+    <%= link_to image_tag("logo", size: "180x180"), podcasts_path  %>
   </div>
 
   <ul class="navbar flex pt-2 pr-2 ">
