--- a/app/views/backend/_sidebar.html.erb
+++ b/app/views/backend/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class="h-full min-h-screen bg-blue-50">
   <div class="flex flex-col items-center mt-3">
-    <%= link_to image_tag("new_logo_black", size: "160x160"), podcasts_path %>
+    <%= link_to image_tag("logo", size: "160x160"), podcasts_path %>
     <div class="w-24 h-24 pt-3 bg-red-300">
       <%= image_tag(@podcast.cover.url, size: "160x160") if @podcast.cover.present? %>
     </div>
