remove audio column in .erb file and add pparamter to mailer.rb

--- a/app/views/subscribe_mailer/send_notification.erb
+++ b/app/views/subscribe_mailer/send_notification.erb
@@ -2,5 +2,5 @@
 
 <p>您訂閱的頻道"#{@podcast.title}"發佈了新的單集"#{"episode.title"} </p>
 
-<p>點擊查看<%= link_to '點擊查看'#'</p>
+<p>點擊查看<%= link_to '點擊查看', podcast_episodes_path</p>
 
