--- a/app/views/frontend/_header.html.erb
+++ b/app/views/frontend/_header.html.erb
@@ -3,6 +3,6 @@
     <%= link_to image_tag("logo_trans", size: "250x250"), "/#" %>
   </div>
   <form class="search-form border hover:border-blue-600 rounded flex my-auto mr-10">
-    <button class="search-btn focus:outline-none w-10 bg-white rounded-l text-gray-500 border-none p-2"><i class="fas fa-search"></i></button><input type="text" class="search-input focus:outline-none w-32 md:w-60 lg:w-72 bg-white rounded-r border-none p-2" placeholder="搜尋 Podcast">
+    <button class="search-btn focus:outline-none w-10 bg-white rounded-l text-gray-500 border-none p-2"><i class="fas fa-search"></i></button><input type="text" class="search-input focus:outline-none w-12 sm:w-40 md:w-60 lg:w-72 bg-white rounded-r border-none p-2" placeholder="搜尋 Podcast">
   </form>
 </header>
