--- a/app/views/player/podcasts/show.html.erb
+++ b/app/views/player/podcasts/show.html.erb
@@ -4,12 +4,12 @@
   <div class="max-w-screen-lg mx-auto pt-10">
     <div class="">
       <span class="bg-genresbg m-10 py-1 px-5 text-white rounded-xl"><%= @podcast.genres %></span>
-      <div class="ms:flex m-10 md:flex">
-        <div class="cover_size pr-5">
+      <div class="m-10 md:flex">
+        <div class="pr-5 md:w-1/3">
           <%= image_tag(@podcast.cover.url, size: "300x300") if @podcast.cover? %>
         </div>
-        <div>
-          <ul class="">
+        <div class="md:w-2/3">
+          <ul>
             <li class="p-1 text-blue-300 text-xl"><%= @podcast.subtitle %></li>
             <li class="p-1 text-white text-4xl"><%= @podcast.name %></li>
             <li class="p-1 text-white"><%= @podcast.description %></li>
