--- a/app/views/player/episodes/show.html.erb
+++ b/app/views/player/episodes/show.html.erb
@@ -28,7 +28,7 @@
         <%= image_tag(@podcast.cover.url, size: "230x230") if @podcast.cover? %>
       </div>
       <div class="mt-10">
-        <div class="text-white text-4xl">EP<%= @episode.episode %>｜<%= @episode.title %></div>
+        <div class="text-white text-4xl"><%= @episode.title %></div>
         <div class="mt-8 text-gray-400">
           <span class="pr-2"><i class="far fa-calendar-alt"></i></span>
           <span class=""><%= @episode.created_at.strftime('%Y-%m-%d') %></div></span>
@@ -62,12 +62,12 @@
           <div class="pb-10 pl-10">
             <%= f.button :submit, "送出留言", class: "btn btn-primary" %>
           </div>
+          <ul id="comment_area">
+          <% @comments.each do |comment| %>
+            <li><%= comment.content %></li>
+          <% end %>
+          </ul>
             <% end %>
-        <ul id="comment_area">
-        <% @comments.each do |comment| %>
-          <li><%= comment.content %></li>
-        <% end %>
-        </ul>
       </div>
     </div>
   </div>
