edit search bar radius-full and footer logo margin-y-auto

--- a/app/views/frontend/_footer.html.erb
+++ b/app/views/frontend/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footerbg">
   <div class="flex flex-wrap justify-around">
-    <div class=""><%= link_to image_tag("logo_trans", size: "180x180"), "/#" %></div>
+    <div class="my-auto"><%= link_to image_tag("logo_trans", size: "180x180"), "/#" %></div>
     <div>
       <ul class="flex py-2">
         <li class="footer_link"><a href="">官方網站</a></li>
