--- a/app/javascript/styles/form.scss
+++ b/app/javascript/styles/form.scss
@@ -29,3 +29,7 @@ abbr[title="required"] {
 .edit-form {
   @apply w-full border rounded-md mx-2 my-3 p-1 hover:border-blue-400 focus:outline-none focus:border-blue-400 focus:ring focus:ring-blue-100 transition duration-300;
 }
+
+.input.string.required.comment_content{
+  @apply w-full;
+}
