--- a/app/views/backend/_navbar.html.erb
+++ b/app/views/backend/_navbar.html.erb
@@ -1,8 +1,11 @@
-<div class="flex justify-end w-full bg-white h-16 py-4 text-gray-600">
-  <ul class="navbar">
-    <li>
-      <ul>
-
+<div class="flex justify-end w-full bg-white h-16 py-4 text-gray-600 relative">
+  <ul class="navbar absolute left-4">
+    <li class="relative mx-3 cursor-pointer text-sm">
+      <input id="podcastNameInput" type="text" placeholder="<%= @podcast.name %>" class="text-2xl focus:outline-none placeholder-gray-700 focus:placeholder-opacity-30 transition duration-1000">
+      <ul id="podcastNameUl" class="absolute shadow-xl w-full py-1 rounded border border-gray-100 border-opacity-70 bg-white hidden">
+        <% current_user.podcasts.each do |podcast| %>
+        <li class="my-1 hover:bg-gray-100 p-2"><%= link_to podcast.name, dashboard_podcast_path(podcast.random_url) %></li>
+        <% end %>
       </ul>
     </li>
   </ul>
