改用URI加密donate hash_params)

--- a/app/views/player/donations/new_donation.html.erb
+++ b/app/views/player/donations/new_donation.html.erb
@@ -18,7 +18,7 @@
       </div>
       <div>
         <div class="flex flex-col justify-center flex-grow md:pt-64 pt-5 pr-7 pl-7 pb-3">
-          <div><%= f.button :submit, "贊助", class: "btn-primary w-full" %></div>
+          <%= f.button :submit, "贊助", class: "btn-primary w-full cursor-pointer" %>
         </div>
         <% end %>
         <footer class="flex text-xs font-light justify-center pb-3">
