--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -23,7 +23,7 @@
           </label>
         </div>
         <div class="w-full text-sm pr-4">
-          <%= f.input :name, input_html:{class: "edit-form" }, label: "Podcast 節目名稱"%>
+          <%= f.input :name, input_html:{class: "edit-form" }, label: "Podcast 節目名稱" ,error: "Username is mandatory, please specify on"%>
           <%= f.input :artist, input_html:{class: "edit-form" }, label: "創作者名稱" %>
           <%= f.input :email, input_html:{class: "edit-form" }, label: "Email" %>
           <%= f.input :language, collection: ["繁體中文", "简体中文", "粵語", "English", "日本語", "한국어"], input_html:{class: "edit-form" }, label: "語言" %>
