--- a/app/javascript/styles/donate.scss
+++ b/app/javascript/styles/donate.scss
@@ -34,3 +34,11 @@
 .donate_cover {
   @apply sm:w-60 sm:h-60;
 }
+
+.donate_button {
+  @apply border w-36 rounded-full p-3 m-3 text-white text-xl bg-blue-500 duration-300 hover:bg-blue-700;
+}
+
+#new_donation {
+  @apply grid justify-evenly;
+}
