修改多餘贅字

--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -13,7 +13,7 @@
     <nav class="fixed top-0 shadow-md">
       <div class="flex w-full justify-between">
         <span class="py-4 px-6">
-          看我建立單集
+          建立單集
         </span>
         <span class="close-create-episode cursor-pointer text-gray-400 hover:text-gray-500 py-4 px-6">
           <i class="fas fa-times"></i>
