--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -3,12 +3,7 @@
 </div>
 
 <!-- 新增單集燈箱 -->
-<% if @episode.errors.any? %>
-  <div class="create-episode fixed w-full h-full bg-black bg-opacity-50 flex justify-end z-10 ">
-<% else %>
-  <div class="create-episode fixed w-full h-full bg-black bg-opacity-50 flex justify-end z-10 hidden">
-<% end %>
-
+<div class="create-episode fixed w-full h-full bg-black bg-opacity-50 flex justify-end z-10 <%=' hidden' unless @episode.errors.any? %>">
   <div class="create-episode-content h-full bg-white flex justify-center relative">
     <nav class="fixed top-0 shadow-md">
       <div class="flex w-full justify-between">
