--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -1,9 +1,5 @@
 <!-- 建立Podcast燈箱 -->
-<% if @podcast.errors.any? %>
-  <div class="create-podcast fixed w-full h-full bg-black bg-opacity-50 flex justify-end z-10 ">
-<% else %>
-  <div class="create-podcast fixed w-full h-full bg-black bg-opacity-50 flex justify-end z-10 hidden">
-<% end %>
+<div class="create-podcast fixed w-full h-full bg-black bg-opacity-50 flex justify-end z-10 <%= ' hidden' unless @podcast.errors.any? %>">
   <div class="create-podcast-content h-full bg-white flex justify-center relative">
     <nav class="fixed top-0 shadow-md">
       <div class="flex w-full justify-between">
