remove argument in episode simple_form

--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -17,7 +17,7 @@
     </nav>
     <!-- 表單內容 -->
     <div class="my-16 overflow-y-auto">
-      <%= simple_form_for @episode, url: podcast_episodes_path(@podcast.random_url, @episode.random_url) do |f| %>
+      <%= simple_form_for @episode, url: podcast_episodes_path(@podcast.random_url) do |f| %>
       <div class="nav-tabs h-20 flex items-end border-b border-gray-100">
         <ul class="inline-flex ml-4" id="createEpisodeFrom">
           <li class="cursor-pointer hover:text-blue-400 font-medium mx-1 pt-3 pb-5 px-2 transition duration-200 text-blue-500 border-b-2 border-blue-400" id="mainEpisode">主要</li>
