--- a/app/views/player/podcasts/show.html.erb
+++ b/app/views/player/podcasts/show.html.erb
@@ -13,7 +13,7 @@
             <li class="p-1 text-blue-300 text-xl"><%= @podcast.subtitle %></li>
             <li class="p-1 text-white text-4xl"><%= @podcast.name %></li>
             <li class="p-1 text-white"><%= @podcast.description %></li>
-            <li class="p-1 text-white"><a href="<%= @podcast.weblink %>" class="pr-3"><i class="fas fa-globe-americas"></i></a><%= @podcast.weblink %></li>
+            <li class="p-1 text-white"><a href="<%= @podcast.weblink %>" target="_blank" class="pr-3"><i class="fas fa-globe-americas"></i> <%= @podcast.weblink %></a></li>
             <li class="flex p-1 pt-8 text-gray-500">
               <a href="" class="fb_icon"><i class="fab fa-facebook-f"></i></a>
               <a href="" class="share_icon"><i class="fas fa-share"></i></a>
