--- a/app/views/podcasts/donate.html.erb
+++ b/app/views/podcasts/donate.html.erb
@@ -32,7 +32,7 @@
       </div>
     </div>
     <!-- 下半框 -->
-    <div class="bg-gray-100">
+    <div class="bg-gray-100 mb-16">
 
       <section class="font-medium flex flex-col">
 
