--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -103,7 +103,7 @@
       </div>
     </div>
      <!-- 下半框 -->
-     <div class="bg-gray-100">
+     <div class="bg-gray-100 mb-16">
        <section class="container container-index w-11/12 mx-auto mt-6">
         <!-- 搜尋框及新增單集 -->
         <div class="flex justify-between">
