--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -144,17 +144,17 @@
       <!-- 搜尋框及建立Podcast -->
       <div class="flex justify-between w-full">
         <form class="search-form flex bg-white border border-gray-300 hover:border-blue-400 rounded transition duration-300">
-          <button class="mr-3 p-1 bg-transparent focus:outline-none text-gray-600">
+          <button class="ml-2 p-1 bg-transparent focus:outline-none text-gray-400">
           <i class="fas fa-search"></i>
           </button>
-          <input type="text" class="ml-3 p-1 bg-transparent focus:outline-none w-60" placeholder="搜尋單集">
+          <input id="searchPodcastInput" type="text" class="ml-3 p-1 bg-transparent focus:outline-none w-60" placeholder="搜尋單集">
         </form>
         <div class="create-podcast-btn py-1 px-4 text-sm text-white bg-blue-500 hover:bg-blue-400 cursor-pointer transition duration-300 rounded">
           建立 Podcast
         </div>
       </div>
       <!-- 節目列表 -->
-      <div class="grid grid-flow-row xl:grid-cols-4 lg:grid-cols-3 md:grid-cols-2 xs:grid-cols-1 gap-x-8 w-full">
+      <div id="podcastsContent" class="grid grid-flow-row xl:grid-cols-4 lg:grid-cols-3 md:grid-cols-2 xs:grid-cols-1 gap-x-8 w-full">
         <% @podcasts.each do |podcast| %>
           <div class="cursor-pointer relative bg-white mt-8 border border-gray-300 hover:border-gray-400 rounded ">
             <div class="flex border-b border-gray-200 items-center">
