--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -158,12 +158,12 @@
         <% @podcasts.each do |podcast| %>
           <div class="cursor-pointer relative bg-white mt-8 border border-gray-300 hover:border-gray-400 rounded ">
             <div class="flex border-b border-gray-200 items-center">
-              <div class="m-3">
+              <div class="m-3 w-20">
                 <%= image_tag(podcast.cover.url, size: "80x80") if podcast.cover? %>
               </div>
-              <div class="w-full">
-                <h3 class="font-semibold text-gray-800 pt-5"><%= link_to podcast.name, dashboard_podcast_path(podcast.random_url), class: "block" %></h3>
-                <%= link_to podcast.artist, dashboard_podcast_path(podcast.random_url), class: "block font-thin text-sm text-gray-600 pb-5" %>
+              <div class="w-full overflow-hidden">
+                <h3 class="font-semibold text-gray-800 pt-5 overflow-hidden"><%= link_to podcast.name, dashboard_podcast_path(podcast.random_url), class: "block textOverflow overflow-hidden pr-5" %></h3>
+                <%= link_to podcast.artist, dashboard_podcast_path(podcast.random_url), class: "block font-thin text-sm text-gray-400 pb-5 textOverflow overflow-hidden pr-5" %>
               </div>
             </div>
             <div class="flex justify-between">
