--- a/app/views/podcasts/dashboard.html.erb
+++ b/app/views/podcasts/dashboard.html.erb
@@ -33,7 +33,7 @@
                 <td class="px-4">4</td>
                 <td class="px-4">1</td>
                 <td class="px-4">6</td>
-                <td class="px-4"><%= @podcast.episodes.count %></td>
+                <td class="px-4"><%= @podcast.episodes.size %></td>
               </tbody>
             </table>
           </div>
