--- a/app/views/player/podcasts/show.html.erb
+++ b/app/views/player/podcasts/show.html.erb
@@ -32,7 +32,7 @@
           <% if current_user.subscribe?(@podcast) %>
             <button class="subscribed-btn bg-red-400" data-id="<%= @podcast.id %>">已訂閱 <i class="far fa-grin-hearts"></i></button>
           <% else %>
-            <button class="subscribed-btn bg-gray-500" data-id="<%= @podcast.id %>">訂閱 <i class="far fa-heart"></i></button>
+            <button class="subscribed-btn bg-red-400" data-id="<%= @podcast.id %>">訂閱 <i class="far fa-heart"></i></button>
           <% end %>
         <% else %>
           <div class="subscribe">
@@ -88,7 +88,7 @@
       </div>
     </div>
   </div>
-  <div class="flex justify-center">
+  <div class="flex justify-center pb-8">
     <button class="border rounded-md p-3 m-3 text-white bg-blue-500 hover:bg-blue-700">
       <%= link_to "返回 Podcast 節目列表" , podcasts_path %>
     </button>
