--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -1,5 +1,5 @@
 <!-- 關閉網頁播放器燈箱用 -->
-<div id="closeEpisodeBtn" class="w-screen h-screen cursor-auto fixed z-10 hidden">
+<div id="closeEpisodebtn" class="w-screen h-screen cursor-auto fixed z-10 hidden">
 </div>
 
 <!-- 新增單集燈箱 -->
@@ -103,10 +103,10 @@
         <!-- 搜尋框及新增單集 -->
         <div class="flex justify-between">
           <form class="search-form flex bg-white border border-gray-300 hover:border-blue-400 rounded transition duration-300">
-            <input type="text" class="ml-3 p-1 bg-transparent focus:outline-none w-96" placeholder="搜尋單集">
-            <button class="mr-3 p-1 bg-transparent focus:outline-none text-gray-400">
+            <input id="searchEpisodeInput" data-podcast-url="<%= @podcast.random_url %>" data-podcast-cover="<%= @podcast.cover %>" type="text" class="ml-3 p-1 bg-transparent focus:outline-none w-96" placeholder="搜尋單集">
+            <span class="mr-3 p-1 bg-transparent focus:outline-none text-gray-400">
               <i class="fas fa-search"></i>
-            </button>
+            </span>
           </form>
           <div class="create-episode-btn border border-gray-300 py-1 px-4 text-sm bg-white hover:text-blue-500 hover:border-blue-500 cursor-pointer transition duration-300 rounded">
             ＋ 新增單集
@@ -122,8 +122,8 @@
               <th class="p-2 w-40 text-right">發布日期</th>
               <th class="p-2 w-20">連結</th>
             </thead>
-            <tbody class="bg-white">
-              <% @episodes.each do |episode, index| %>
+            <tbody id="episodeTbody" class="bg-white">
+              <% @episodes.each do |episode| %>
                 <tr>
                   <td class="p-2 w-24">
                     <%= episode.cover? ? image_tag(episode.cover.url) : @podcast.cover? ? image_tag(@podcast.cover.url) : image_tag("https://picsum.photos/300/300/?random=1") %>
