--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -144,9 +144,9 @@
       <!-- 搜尋框及建立Podcast -->
       <div class="flex justify-between w-full">
         <form class="search-form flex bg-white border border-gray-300 hover:border-blue-400 rounded transition duration-300">
-          <button class="ml-2 p-1 bg-transparent focus:outline-none text-gray-400">
+          <span class="ml-2 p-1 bg-transparent focus:outline-none text-gray-400">
           <i class="fas fa-search"></i>
-          </button>
+          </span>
           <input id="searchPodcastInput" type="text" class="ml-3 p-1 bg-transparent focus:outline-none w-60" placeholder="搜尋單集">
         </form>
         <div class="create-podcast-btn py-1 px-4 text-sm text-white bg-blue-500 hover:bg-blue-400 cursor-pointer transition duration-300 rounded">
