增加標點符號 縮排條整 episode_controller

--- a/app/views/subscribe_mailer/send_notification_to.html.erb
+++ b/app/views/subscribe_mailer/send_notification_to.html.erb
@@ -1,7 +1,6 @@
 <h3><%= @user.email %>，您好</h3>
 
-<div>您訂閱的頻道<%= @podcast_name %> </div> </br>
-<div> 發佈了新的單集 <%= @title %> </div>
-
+<div>您訂閱的頻道 《<%= @podcast_name %>》 </div> </br>
+<div> 發佈了新的單集 《<%= @title %>》 </div>
 
 
