--- a/app/views/pages/podcasters.html.erb
+++ b/app/views/pages/podcasters.html.erb
@@ -1,11 +1,16 @@
-<h1>Pages#podcaster</h1>
-<p>Find me in app/views/pages/podcaster.html.erb</p>
-
-
-<div class="flex">
-
-  參考 <%= link_to "Soundon官網for Podcaster", 'https://podcasters.soundon.fm/', class: "btn bg-green-400 hover:bg-green-600", target: "_blank" %>
-  <%= link_to "登入", new_user_session_url(subdomain: "host"), class: "btn bg-gray-400 hover:bg-gray-600" %>
-  <%= link_to "馬上註冊", new_user_registration_url(subdomain: "host") , class: "btn btn-primary" %>
-
+<div class="relative h-screen flex flex-col justify-between items-center">
+  <div class="relative flex flex-col h-full justify-center items-center w-full">
+    <div class="">
+      <%= link_to image_tag("logo", size: "600x600"), "/#" %>
+    </div>
+    <div class="flex m-2 p-2">
+      <div class="p-2"><%= link_to "登入", new_user_session_url(subdomain: "host"), class: "homepage_btn" %></div>
+      <div class="p-2"><%= link_to "馬上註冊", new_user_registration_url(subdomain: "host") , class: "homepage_btn" %></div>
+    </div>
+  </div>
+  <div class="footer_copyright w-full">
+    <p class="p-1">©</p>
+    <p class="p-1">2021</p>
+    <p class="p-1">SoundBar</p>
+  </div>
 </div>
