--- a/app/javascript/styles/button.scss
+++ b/app/javascript/styles/button.scss
@@ -33,3 +33,8 @@
 .google_btn {
   @apply bg-red-500 border-none px-4 py-2 rounded-xl cursor-pointer text-white shadow-xl hover:shadow-inner transition duration-500 ease-in-out  transform hover:-translate-x-0 hover:scale-105;
 }
+
+.homepage_btn {
+  @apply bg-blue-500 text-white text-2xl rounded-2xl p-3 hover:bg-titleblue duration-300;
+}
+
