--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div class="text-center font-extrabold bg-yellow-200 text-red-700">
+    <div id="notice" class="text-center font-extrabold bg-yellow-200 text-red-700">
       <%= notice %>
     </div>
 
